# nano-token-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: sync-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  oauth_usage.rs
src-tauri/src/providers/: claude_code.rs  codex.rs  pricing.rs  traits.rs  types.rs
src/components/: Header.tsx  PopoverShell.tsx  ProjectBreakdown.tsx  SettingsOverlay.tsx  SourceSelector.tsx  UsageAlertBar.tsx
src/contexts/: SettingsContext.tsx
src/hooks/: useCombinedStats.ts  useToday.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  tr.json  zh-CN.json  zh-TW.json
src/lib/: format.ts  types.ts
src/styles/: global.css
supabase/: config.toml
supabase/migrations/: 20260321_init.sql  20260327_chat_reactions_and_replies.sql  20260327_multi_device_snapshots.sql  20260330_leaderboard_hidden.sql  20260410_leaderboard_date_grid.sql  20260411000000_remove_leaderboard_outlier_filter.sql
